--- a/index.html
+++ b/index.html
@@ -66,9 +66,21 @@
         .header-bar {
             position: fixed; top: 0; left: 0; right: 0;
             height: 80px; display: flex; align-items: center; justify-content: space-between;
-            padding: 0 20px;
-            background: linear-gradient(to bottom, var(--background-color) 0%, transparent 100%);
+            padding: 0 35px;
             z-index: 10;
+            background-color: transparent;
+        }
+        .header-bar::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: -2;
+            backdrop-filter: blur(2.5px);
+            mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 0) 100%);
+            -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 0%, rgba(0, 0, 0, 1) 50%, rgba(0, 0, 0, 0) 100%);
         }
         .app-title { font-family: 'Open Runde', sans-serif; font-size: 1.5rem; font-weight: 700; }
 
