--- a/index.html
+++ b/index.html
@@ -200,13 +200,13 @@
 
         .new-btn-fab {
             position: fixed; bottom: 25px; right: 25px;
-            background: var(--text-color); color: var(--background-color);
+            background: var(--accent); color: var(--background-color);
             border-radius: 35px; corner-shape: superellipse(1.5);
             backdrop-filter: var(--edge-refraction-filter) saturate(2) blur(2.5px);
             width: 60px; height: 60px;
             display: flex; align-items: center; justify-content: center;
             border: 1px solid var(--glass-border);
-            box-shadow: var(--sun-shadow); 0 5px 15px rgba(0,0,0,0.2); cursor: pointer; z-index: 50;
+            box-shadow: var(--sun-shadow), 0 5px 15px rgba(0,0,0,0.2); cursor: pointer; z-index: 50;
         }
     </style>
 </head>
