--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 
         .space-card {
             aspect-ratio: 1;
+            box-shadow: var(--sun-shadow);
             background: var(--search-background);
             border: 1px solid var(--glass-border);
             border-radius: 35px; corner-shape: superellipse(1.5);
@@ -177,7 +178,7 @@
             position: absolute; bottom: 90px; left: 50%; transform: translateX(-50%);
             background: var(--search-background); border: 1px solid var(--glass-border);
             padding: 10px; display: none; gap: 8px;
-            border-radius: 35px; corner-shape: superellipse(1.5);
+            border-radius: 35px 35px 0 0; corner-shape: superellipse(1.5);
             backdrop-filter: var(--edge-refraction-filter) saturate(2) blur(2.5px);
             z-index: 99; flex-wrap: wrap; max-width: 90vw; justify-content: center;
         }
