--- a/index.html
+++ b/index.html
@@ -37,6 +37,14 @@
             cursor: pointer;
             transition: transform 0.2s, background 0.2s;
         }
+        .icon-btn.active {
+            background-color: var(--accent);
+            border-radius: 35px;
+            corner-shape: superellipse(1.5);
+            color: var(--background-color);
+            border: 1px solid var(--glass-border);
+            box-shadow: var(--sun-shadow);
+        }
         .side-panel-btn {
             background-color: var(--search-background);
             border: 1px solid var(--glass-border);
