--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
             document.getElementById('canvas-container').style.backgroundSize = `${size}px ${size}px`;
             document.getElementById('canvas-container').style.backgroundPosition = `${offX}px ${offY}px`;
             document.getElementById('canvas-container').style.backgroundImage = 
-                `radial-gradient(circle, var(--search-background-op) 1px, transparent 1px)`;
+                `radial-gradient(circle, var(--overlay-color-op) 1px, transparent 1px)`;
         }
 
         function toggleGrid() {
