--- a/index.html
+++ b/index.html
@@ -310,10 +310,10 @@
         <!-- Main toolssection -->
         <div class="toolssection">
             <button class="icon-btn active" onclick="setMode('select')" id="btn-select">
-                <span class="material-symbols-rounded">pan_tool_alt</span>
+                <span class="material-symbols-rounded">arrow_selector_tool</span>
             </button>
             <button class="icon-btn" onclick="setMode('draw')" id="btn-draw" oncontextmenu="toggleOptions('draw-options'); return false;">
-                <span class="material-symbols-rounded">draw</span>
+                <span class="material-symbols-rounded">ink_pen</span>
             </button>
              <button class="icon-btn" onclick="setMode('shape')" id="btn-shape">
                 <span class="material-symbols-rounded">shapes</span>
