--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 
         /* Properties Panel (Selection) */
         .prop-panel {
-            position: absolute; top: 80px; right: 20px;
+            position: absolute; bottom: 120px; right: 20px;
             background: var(--search-background); border: 1px solid var(--glass-border);
             border-radius: 15px; padding: 10px; display: none; flex-direction: column; gap: 8px;
             backdrop-filter: blur(10px); z-index: 90; width: 50px;
@@ -392,6 +392,7 @@
             <button class="icon-btn" onclick="setMode('shape')" id="btn-shape" oncontextmenu="toggleOptions('shape-options'); return false;" title="Shapes">
                 <span class="material-symbols-rounded">shapes</span>
             </button>
+            <div style="width: 1px;background: var(--overlay-color-op);margin: 5px;"></div>
             <button class="icon-btn" onclick="createStickyNote()" id="btn-note" oncontextmenu="toggleOptions('note-options'); return false;" title="Sticky Note">
                 <span class="material-symbols-rounded">sticky_note_2</span>
             </button>
