--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
         
         .header-bar {
             position: fixed; top: 0; left: 0; right: 0;
-            height: 80px; display: flex; align-items: center; justify-content: space-between;
-            padding: 0 35px;
+            height: 80px; display: flex; align-items: center; gap: 15px;
+            padding: 0 25px;
             z-index: 10;
             background-color: transparent;
         }
@@ -237,6 +237,7 @@
     <!-- Home View -->
     <div id="home-view" class="view">
         <div class="header-bar">
+            <img src="favicon.png" style="height: 48px;">
             <div class="app-title">Livespace</div>
         </div>
         <div class="spaces-grid" id="spaces-list">
